k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          imagePullPolicy: Always
          image: kurtaga/frontend:latest
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gameplay-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gameplay
  template:
    metadata:
      labels:
        app: gameplay
    spec:
      containers:
        - image: kurtaga/gameplay:2024-01-11-04-44-39
          name: gameplay
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: server
          # livenessProbe:
          #   httpGet:
          #     path: /health/live
          #     port: server
          #   initialDelaySeconds: 20
          #   periodSeconds: 3
          # readinessProbe:
          #   httpGet:
          #     path: /health/ready
          #     port: server
          #   initialDelaySeconds: 20
          #   periodSeconds: 3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: generator-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: generator
  template:
    metadata:
      labels:
        app: generator
    spec:
      containers:
        - name: generator
          image: kurtaga/generator-ms:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
        - image: tmiklavic/users:latest
          name: users
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: server
          livenessProbe:
            httpGet:
              path: /health/live
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /health/ready
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reports-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reports
  template:
    metadata:
      labels:
        app: reports
    spec:
      containers:
        - name: reports
          image: tmiklavic/reports:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
