k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: keydash-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: generator-service
spec:
  selector:
    app: generator-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
