k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /frontend(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          - path: /gameplay(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: gameplay-service
                port:
                  number: 8080
          - path: /generator(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: generator-service
                port:
                  number: 8080
          - path: /users(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: users-service
                port:
                  number: 8080
          - path: /reports(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: reports-service
                port:
                  number: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: gameplay-service
spec:
  selector:
    app: gameplay
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: generator-service
spec:
  selector:
    app: generator
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: users-service
spec:
  selector:
    app: users
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: reports-service
spec:
  selector:
    app: reports
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
# ---
# Create users loadbalancer
# apiVersion: v1
# kind: Service
# metadata:
#   name: users-loadbalancer
# spec:
#   type: LoadBalancer
#   selector:
#     app: users
#   ports:
#     - protocol: TCP
#       port: 8080
#       targetPort: 8080
